Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a philosop
 <h3>
 <a name="contribute-and-use" class="anchor" href="#contribute-and-use"><span class="octicon octicon-link"></span></a>Contribute and Use.</h3>
 
-<p>We've crafted some places to begin and look forward to your help to begin again. The texts in the Open Husserl Archives are <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL Licensed</a>. </p>
+<p>We've crafted some places to begin and look forward to your help to begin again. The texts in the Open Husserl Archives are <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL</a>. </p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with GitHub? Check out the documentation at <a href="http://help.github.com">http://help.github.com</a> or contact <a href="mailto:support@github.com">support@github.com</a> and they will help you sort it out.</p>
+<p>Having trouble with GitHub? Check out the documentation at <a href="http://help.github.com">http://help.github.com</a> or contact <a href="mailto:support@github.com">support@github.com</a> and they will help you.</p>
 
 <p><img src="https://sphotos-a-ord.xx.fbcdn.net/hphotos-frc1/p480x480/944202_387690764683086_548367299_n.jpg" alt="GitHusserl"></p>
 
