Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>GitHusserl: The Open Husserl Archives</h1>
-        <p>Husserl&#39;s Philosophical Seminary: Workshop Notebooks, Lectures, and Seminar Translations</p>
+        <p>Husserl's Philosophical Seminary: Workshop Notebooks, Lectures, and Seminar Translations</p>
       </header>
 
       <div id="banner">
@@ -52,6 +52,8 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a philosop
 
 <h3>
 <a name="contribute-and-use" class="anchor" href="#contribute-and-use"><span class="octicon octicon-link"></span></a>Contribute and Use.</h3>
+
+<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place, that insulates itself as much as is possible from the politics and commerce of such things, to aggregate these works of scholarship that are already available, but so difficult to acquire. The seed of the project will be the contributions by the monks and nuns of St. Lovelace, and all are welcome to revise and check in improvements as well as new texts. We call this place <a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Husserl's Philosophical Seminary</a> because of a one-off comment by Dorion Cairns in his recounting of conversations with Husserl and those around him during his years in Freiburg. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. </p>
 
 <p>We've crafted some places to begin and look forward to your help to begin again. The texts in the Open Husserl Archives are <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL</a>. </p>
 
