--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 <a id="welcome-to-githusserl" class="anchor" href="#welcome-to-githusserl" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHusserl.</h3>
 
 <p><img src="http://4.bp.blogspot.com/-g9EW7CR9MLw/T0ElpnF04nI/AAAAAAAABKo/BNzZyzdA9l0/s1600/Husserl.jpg" alt="Edmund Husserl with pipe.">
-Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician by training, a psychologist by practicum, a logician in temperament, and a philosopher in calling. Together these strands made him the founder of phenomenology.</p>
+Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician by training, a psychologist by practicum, a logician in temperament, and a philosopher by calling. Together these strands made him the founder of phenomenology.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>In 2010, the monks and nuns of St. Lovelace (<a href="https://github.com/stlovelacemonastery" class="user-mention">@stlovelacemonastery</a>) began working toward the Open Husserl Archives. In 2013 they founded <a href="https://github.com/StLovelace/GitHusserl">GitHusserl</a> to begin to attend to the seeds of this work. In 2015 some of the private repository began to be released.</p>
+<p>In 2010, the monks and nuns of St. Lovelace (<a href="https://github.com/stlovelacemonastery" class="user-mention">@stlovelacemonastery</a>) began working toward the Open Husserl Archives. In 2013 they founded <a href="https://github.com/StLovelace/GitHusserl">GitHusserl</a> to begin to attend to the seed of this work. In 2015 some of the private repository began to be released.</p>
 
 <h3>
 <a id="contribute-and-use" class="anchor" href="#contribute-and-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute and Use.</h3>
