Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with GitHub? Check out the documentation at <a href="http://help.github.com">http://help.github.com</a> or contact <a href="mailto:support@github.com">support@github.com</a> and they will help you.</p>
+<p>Having trouble with GitHub? Check out the documentation at <a href="http://help.github.com">http://help.github.com</a> or contact <a href="mailto:support@github.com">support@github.com</a> and they will help you. </p>
+
+<h3>
+<a id="license-and-citation" class="anchor" href="#license-and-citation" aria-hidden="true"><span class="octicon octicon-link"></span></a>License and Citation</h3>
+
+<p>This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit <a href="http://creativecommons.org/licenses/by-sa/4.0/">http://creativecommons.org/licenses/by-sa/4.0/</a>.</p>
 
 <pre><code>"From what rests on the surface one is led into the depths." 
 -Edmund Husserl (1936)
