--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-githusserl" class="anchor" href="#welcome-to-githusserl" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHusserl.</h3>
-
-<p><img src="http://4.bp.blogspot.com/-g9EW7CR9MLw/T0ElpnF04nI/AAAAAAAABKo/BNzZyzdA9l0/s1600/Husserl.jpg" alt="Edmund Husserl with pipe.">
+        <p><img src="http://4.bp.blogspot.com/-g9EW7CR9MLw/T0ElpnF04nI/AAAAAAAABKo/BNzZyzdA9l0/s1600/Husserl.jpg" alt="Edmund Husserl with pipe.">
 Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician by training, a psychologist by practicum, a logician in temperament, and a philosopher by calling. Together these strands made him the founder of phenomenology.</p>
 
 <h3>
@@ -42,7 +39,9 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
 <h3>
 <a id="contribute-and-use" class="anchor" href="#contribute-and-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute and Use.</h3>
 
-<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. The seed of the project will be the contributions by the monks and nuns of St. Lovelace, and all are welcome to revise and check in improvements as well as new texts. We call this place <a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Husserl's Philosophical Seminary</a> because of a one-off comment by Dorion Cairns in his recounting of conversations with Husserl and those around him during his years in Freiburg. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. </p>
+<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. The seed of the project will be the contributions by the monks and nuns of St. Lovelace, and all are welcome to revise and check in improvements as well as new texts. </p>
+
+<p>We call this place <a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Husserl's Philosophical Seminary</a> because of a one-off comment by Dorion Cairns in his recounting of conversations with Husserl and those around him during his years in Freiburg. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. </p>
 
 <p>We've crafted some places to begin and look forward to your help to begin again. </p>
 
@@ -66,6 +65,16 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-70691158-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
