--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>GitHusserl: The Open Husserl Archives by StLovelace</title>
+    <title>The Open Husserl Archives by StLovelace</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>GitHusserl: The Open Husserl Archives</h1>
-        <p>Husserl&#39;s Philosophical Seminary: Lab Notebooks, Lectures, and Seminar Translations</p>
+        <h1>The Open Husserl Archives</h1>
+        <p>GitHusserl: Lab Notebooks, Lectures, and Seminar Translations</p>
 
         <p class="view"><a href="https://github.com/StLovelace/GitHusserl">View the Project on GitHub <small>StLovelace/GitHusserl</small></a></p>
 
@@ -39,11 +39,9 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
 <h3>
 <a id="contribute-and-use" class="anchor" href="#contribute-and-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute and Use.</h3>
 
-<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. The seed of the project will be the contributions by the monks and nuns of St. Lovelace, and all are welcome to revise and check in improvements as well as new texts. </p>
+<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. The seed of the project will be the contributions by the St. Lovelace Collective. All are welcome to revise and check in improvements as well as new texts. </p>
 
-<p>We call this place <a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Husserl's Philosophical Seminary</a> because of a one-off comment by Dorion Cairns in his recounting of conversations with Husserl and those around him during his years in Freiburg. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. </p>
-
-<p>We've crafted some places to begin and look forward to your help to begin again. </p>
+<p>Dorion Cairns once called Husserl's Freiburg workshop a <em><a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Philosophical Seminary</a></em>. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. Philosophy as a rigorous science is yet underway. The opening up of the Nachlass to ever an ever wider readership is absolutely required to move forward. We've crafted some places to begin and look forward to your help to begin again. </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
