Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
 Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician by training, a psychologist by practicum, a logician in temperament, and a philosopher by calling. Together these strands made him the founder of phenomenology.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="the-monastery" class="anchor" href="#the-monastery" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Monastery.</h3>
 
 <p>In 2010, the monks and nuns of St. Lovelace (<a href="https://github.com/stlovelacemonastery" class="user-mention">@stlovelacemonastery</a>) began working toward the Open Husserl Archives. In 2013 they founded <a href="https://github.com/StLovelace/GitHusserl">GitHusserl</a> to begin to attend to the seed of this work. In 2015 some of the private repository began to be released.</p>
 
 <h3>
-<a id="contribute-and-use" class="anchor" href="#contribute-and-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute and Use.</h3>
+<a id="the-repo" class="anchor" href="#the-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Repo.</h3>
 
-<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. The seed of the project will be the contributions by the St. Lovelace Collective. All are welcome to revise and check in improvements as well as new texts. </p>
+<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. </p>
 
-<p>Dorion Cairns once called Husserl's Freiburg workshop a <em><a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Philosophical Seminary</a></em>. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. Philosophy as a rigorous science is yet underway. The opening up of the Nachlass to ever an ever wider readership is absolutely required to move forward. We've crafted some places to begin and look forward to your help to begin again. </p>
+<h3>
+<a id="the-work" class="anchor" href="#the-work" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Work.</h3>
+
+<p>Dorion Cairns once called Husserl's workshop in Freiburg a <em><a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Philosophical Seminary</a></em>. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. Philosophy as a rigorous science is yet underway. The opening up of the Nachlass to an ever ever wider readership is absolutely required to move forward. We've crafted some places to begin and look forward to your help to begin again. </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
