Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <p><img src="http://4.bp.blogspot.com/-g9EW7CR9MLw/T0ElpnF04nI/AAAAAAAABKo/BNzZyzdA9l0/s1600/Husserl.jpg" alt="Edmund Husserl with pipe.">
-Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician by training, a psychologist by practicum, a logician in temperament, and a philosopher by calling. Together these strands made him the founder of phenomenology.</p>
+Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician (a student of Königsberger and Weierstrass) and a psychologist (a student of Wundt, Brentano, and Stumpf). He became a philosopher as one called to the vocation on behalf of science. An autodidact driven to fundamental accounts, Husserl read and corresponded with scientists and scholars from across the academy (see his 10 volumes of letters: <em><a href="http://www.springer.com/us/book/9780792319252">Edmund Husserl Briefwechsel: Die Brentanoschule</a></em>). Together these made him the founder of phenomenology.</p>
 
 <h3>
 <a id="the-monastery" class="anchor" href="#the-monastery" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Monastery.</h3>
@@ -44,7 +44,7 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
 <h3>
 <a id="the-work" class="anchor" href="#the-work" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Work.</h3>
 
-<p>Dorion Cairns once called Husserl's workshop in Freiburg a <em><a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Philosophical Seminary</a></em>. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. Philosophy as a rigorous science is yet underway. The opening up of the Nachlass to an ever ever wider readership is absolutely required to move forward. We've crafted some places to begin and look forward to your help to begin again. </p>
+<p>Dorion Cairns once called Husserl's workshop in Freiburg a <em><a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">Philosophical Seminary</a></em>. We believe this phrase, in all of its beautiful anachronism, communicates something true about the mission that phenomenology is engaged in and the manner in which those who would contribute come into doing so. Philosophy as a rigorous science is yet underway. The opening up of the Nachlass to an ever wider readership is absolutely required to move forward. We've crafted some places to begin and look forward to your help to begin again. </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
