--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <p><img src="http://4.bp.blogspot.com/-g9EW7CR9MLw/T0ElpnF04nI/AAAAAAAABKo/BNzZyzdA9l0/s1600/Husserl.jpg" alt="Edmund Husserl with pipe.">
-Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician (a student of Königsberger and Weierstrass) and a psychologist (a student of Wundt, Brentano, and Stumpf). He became a philosopher as one called to the vocation on behalf of science. An autodidact driven to fundamental accounts, Husserl read and corresponded with scientists and scholars from across the academy (see his 10 volumes of letters: <em><a href="http://www.springer.com/us/book/9780792319252">Edmund Husserl Briefwechsel: Die Brentanoschule</a></em>). Together these made him the founder of phenomenology.</p>
+Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician (a student of Königsberger and Weierstrass) and a psychologist (a student of Wundt, Brentano, and Stumpf). He became a philosopher as one called to the vocation on behalf of science. An autodidact driven to fundamental accounts, Husserl read and corresponded with scientists and scholars from across the academy (see his 10 volumes of letters: <em><a href="https://hiw.kuleuven.be/hua/editionspublications/husserliana-dokumente">Edmund Husserl Briefwechsel</a></em>). At the turn of the Twentieth Century he became the <a href="http://plato.stanford.edu/entries/husserl">founder of Phenomenology</a>.</p>
 
 <h3>
 <a id="the-monastery" class="anchor" href="#the-monastery" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Monastery.</h3>
