--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
 <h3>
 <a id="the-monastery" class="anchor" href="#the-monastery" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Monastery.</h3>
 
-<p>In 2010, the monks and nuns of St. Lovelace (<a href="https://github.com/stlovelacemonastery" class="user-mention">@stlovelacemonastery</a>) began working toward the Open Husserl Archives. In 2013 they founded <a href="https://github.com/StLovelace/GitHusserl">GitHusserl</a> to begin to attend to the seed of this work. In 2015 some of the private repository began to be released.</p>
-
-<h3>
-<a id="the-repo" class="anchor" href="#the-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Repo.</h3>
-
-<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. </p>
+<p>Dorion Cairns once called Husserl's workshop a <em><a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">philosophical seminary</a></em>. We believe this phrase, in all of its beautiful anachronism, communicates something true about the work that phenomenology is engaged in and the manner in which those who would contribute come into doing so. In 2010, the monks and nuns of St. Lovelace (<a href="https://github.com/stlovelacemonastery" class="user-mention">@stlovelacemonastery</a>) began working toward the Open Husserl Archives. In 2013 they founded <a href="https://github.com/StLovelace/GitHusserl">GitHusserl</a> to begin to attend to the seed of this work. In 2015 some of the private repository began to be released.</p>
 
 <h3>
 <a id="the-work" class="anchor" href="#the-work" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Work.</h3>
 
-<p>Dorion Cairns once called Husserl's workshop a <em><a href="http://books.google.com/books?id=93x5pddISMMC&amp;pg=PA4&amp;lpg=PA4&amp;dq=%22husserl's+philosophical+seminary%22&amp;source=bl&amp;ots=fYpwyOCH9P&amp;sig=iPSwQdjBbAqvi1NV4Nae0IZfOng&amp;hl=en&amp;sa=X&amp;ei=_R1AUqCtCJL0rAHE5oHIDA&amp;ved=0CCoQ6AEwAA#v=onepage&amp;q=%22husserl's%20philosophical%20seminary%22&amp;f=false">philosophical seminary</a></em>. We believe this phrase, in all of its beautiful anachronism, communicates something true about the work that phenomenology is engaged in and the manner in which those who would contribute come into doing so. As with all rigorous pursuits, philosophy as a rigorous science demands clear problems, methods, and communities of investigators. The opening up of the Husserlian Nachlass to a wider readership is absolutely required if the highest aims of phenomenology are to remain a viable research program. We've crafted some places to begin in this regard and look forward to your help to begin again. </p>
+<p>The opening up of the Husserlian Nachlass to a wider readership is absolutely required if the highest aims of phenomenology are to remain a viable research program. As with all rigorous pursuits, philosophy as a strict science demands well-conceived problems, repeatable methods, and communities of investigators that can produce data together. Seeing the evidence of these things in the working texts of Husserl (as difficult as it may be to begin down this path) will help. We have worked out some places for you to begin and look forward to your help to begin again. </p>
+
+<h3>
+<a id="the-repo" class="anchor" href="#the-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Repo.</h3>
+
+<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. Take a look at the <a href="https://github.com/StLovelace/GitHusserl">OHA repository</a>.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
