Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <p><img src="http://4.bp.blogspot.com/-g9EW7CR9MLw/T0ElpnF04nI/AAAAAAAABKo/BNzZyzdA9l0/s1600/Husserl.jpg" alt="Edmund Husserl with pipe.">
-Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician (a student of Königsberger and Weierstrass) and a psychologist (a student of Wundt, Brentano, and Stumpf). He became a philosopher as one called to the vocation on behalf of science. An autodidact driven to fundamental accounts, Husserl read and corresponded with scientists and scholars from across the academy (see his 10 volumes of letters: <em><a href="https://hiw.kuleuven.be/hua/editionspublications/husserliana-dokumente">Briefwechsel</a></em>). At the turn of the Twentieth Century he became the <a href="http://plato.stanford.edu/entries/husserl">founder of Phenomenology</a>.</p>
+Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathematician (a student of Königsberger and Weierstrass) and a psychologist (a student of Wundt, Brentano, and Stumpf). He became a philosopher as one called to the vocation on behalf of science. An autodidact driven to fundamental accounts, Husserl read and corresponded with scientists and scholars from across the academy (see his 10 volumes of letters: <em><a href="https://hiw.kuleuven.be/hua/editionspublications/husserliana-dokumente">Briefwechsel</a></em>). At the turn of the Twentieth Century he became the <a href="http://plato.stanford.edu/entries/husserl">founder of phenomenology</a>.</p>
 
 <h3>
 <a id="the-monastery" class="anchor" href="#the-monastery" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Monastery.</h3>
@@ -39,12 +39,12 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
 <h3>
 <a id="the-work" class="anchor" href="#the-work" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Work.</h3>
 
-<p>The opening up of the Husserlian Nachlass to a wider readership is absolutely required if the highest aims of phenomenology are to remain a viable research program. As with all rigorous pursuits, philosophy as a strict science demands well-conceived problems, repeatable methods, and communities of investigators that can produce data together. Seeing the evidence of these things in the working texts of Husserl (as difficult as it may be to begin down this path) will help. We have worked out some places for you to begin and look forward to your help to begin again. </p>
+<p>The opening up of the Husserlian <em>Nachlass</em> to a wider readership is absolutely required if the highest aims of phenomenology are to remain a viable research program. As with all rigorous pursuits, philosophy as a strict science demands well-conceived problems, repeatable methods, and communities of investigators that can produce data together. Seeing the evidence of these things in the working texts of Husserl (as difficult as it may be to begin down this path) will help. We have worked out some places for you to begin and look forward to your help to begin again. </p>
 
 <h3>
 <a id="the-repo" class="anchor" href="#the-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Repo.</h3>
 
-<p>There are thousands of critical translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It seems high time to have a place to aggregate these works of scholarship that are already available, but so difficult to acquire. A place that insulates itself from the politics and commerce of such things. Take a look at the <a href="https://github.com/StLovelace/GitHusserl">OHA repository</a>.</p>
+<p>There are thousands of critical and computational translations of manuscripts and fragments scattered across the literature, dissertation archives, and the internet. It is time to have a place to aggregate these works of scholarship that are available but difficult to acquire--a place that insulates itself from the politics and commerce of the market and the academy. The St. Lovelace <a href="https://github.com/StLovelace/GitHusserl">OHA repository</a> is one such place on the outer fray of the digital humanities.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
