Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@ Edmund Gustav Albrecht Husserl (April 8, 1859 – April 27, 1938) was a mathemat
 
 <p>The Open Husserl Archives (OHA) is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit <a href="http://creativecommons.org/licenses/by-sa/4.0/">http://creativecommons.org/licenses/by-sa/4.0/</a>. </p>
 
-<p>To cite the OHA please use the project's <a href="https://zenodo.org/record/34235">DOI</a>. 
-<a href="http://dx.doi.org/10.5281/zenodo.34235"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.34235.svg" alt="DOI"></a></p>
+<p>To cite the OHA please use the project's <a href="https://zenodo.org/record/34235">DOI</a>.</p>
 
-<p>For more information on citing GitHub repos please see: <a href="https://guides.github.com/activities/citable-code">Making Your Code Citable</a>.</p>
+<p><a href="http://dx.doi.org/10.5281/zenodo.34235"><img src="https://zenodo.org/badge/doi/10.5281/zenodo.34235.svg" alt="DOI"></a></p>
 
 <pre><code>"From what rests on the surface one is led into the depths." 
 -Edmund Husserl (1936)
